chore: updated manifest labels, remove references to model ui extension

--- a/config/reference-api/manifest.yaml
+++ b/config/reference-api/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: reference-api
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/name: argocd-ephemeral-access
+    app.kubernetes.io/name: argocd-release-details
   name: reference-api
 ---
 apiVersion: v1
