--- a/config/reference-api/service_account.yaml
+++ b/config/reference-api/service_account.yaml
@@ -3,6 +3,6 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/component: reference-api
-    app.kubernetes.io/name: argocd-ephemeral-access
+    app.kubernetes.io/name: argocd-release-details
     app.kubernetes.io/managed-by: kustomize
   name: reference-api
