fix: commented out install manifest files, will revert when manifest generation is added

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -63,8 +63,9 @@ checksum:
 release:
   prerelease: auto
   draft: false
-  extra_files:
-    - glob: ./install.yaml
+  # Revert this after the manifest generation is complete.
+  # extra_files:
+  #   - glob: ./install.yaml
   header: |
     ## argocd-repository-details
     {{ .Date }}
