--- a/config/reference-api/kustomization.yaml
+++ b/config/reference-api/kustomization.yaml
@@ -2,6 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment.yaml
-  - service_account.yaml
-  - service.yaml
+- deployment.yaml
+- service_account.yaml
+- service.yaml
+images:
+- name: us-west1-docker.pkg.dev/moz-fx-platform-artifacts/platform-shared-images/argocd-repository-details
+  newTag: latest
+- name: us-west1-docker.pkg.dev/moz-fx-platform-artifacts/platform-shared-images/reference-api
+  newTag: latest
