--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,9 @@ jobs:
   release:
     runs-on: ubuntu-24.04
     if: github.repository == 'mozilla/argocd-repository-details'
+    permissions:
+      contents: read
+      id-token: write
     name: Release
     steps:
       - name: Checkout
