--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-24.04
     if: github.repository == 'mozilla/argocd-repository-details'
     permissions:
-      contents: read
+      contents: write
       id-token: write
     name: Release
     steps:
