--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "css-loader": "^7.1.2",
     "foundation-sites": "^6.9.0",
     "moment": "^2.29.4",
@@ -17,13 +17,13 @@
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.13.1",
     "react-markdown": "^9.0.1",
     "react-moment": "^1.1.3",
-    "sass": "^1.81.0",
-    "sass-loader": "^16.0.3",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
-    "uuid": "7.x",
+    "uuid": "11.0.3",
     "xterm": "^5.3.0"
   },
   "scripts": {
@@ -55,14 +55,14 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
-    "argo-ui": "^1.0.0",
-    "esbuild-loader": "^3.0.1",
-    "orval": "v7.1.1",
-    "ts-loader": "8.2.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.75.0",
+    "argo-ui": "git+https://github.com/argoproj/argo-ui.git",
+    "esbuild-loader": "^4.2.2",
+    "orval": "7.3.0",
+    "ts-loader": "9.5.1",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^5.1.4"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
