--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,13 @@
+version: "2"
+
 run:
   timeout: 5m
   allow-parallel-runners: true
+
+formatters:
+  enable:
+    - goimports
+    - gofmt
 
 issues:
   # don't skip warning about doc comments
@@ -13,13 +20,9 @@ linters:
   enable:
     - dupl
     - errcheck
-    - exportloopref
     - ginkgolinter
     - goconst
     - gocyclo
-    - gofmt
-    - goimports
-    - gosimple
     - govet
     - ineffassign
     - lll
@@ -27,7 +30,6 @@ linters:
     - nakedret
     - prealloc
     - staticcheck
-    - typecheck
     - unconvert
     - unparam
     - unused
